[package]
name = "ultrahuman-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json"] }
rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
